--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/peanut-butter-cookies.html">Flourless Peanut Butter Cookies</a></li>
+        <li><a href="./recipes/guacamole.html">Traditional Mexican Guacamole</a></li>
+    </ul>
 </body>
 </html>
