Add width attribute to all recipe images

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Traditional Mexican Guacamole</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F848092.jpg" alt="photo of guacamole">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F848092.jpg" alt="photo of guacamole" style="width:600px">
     <h2>Description</h2>
         <p>This guacamole is great! Whether or not you want it spicy, this guacamole is a dip to die for!</p>
     <h2>Ingredients</h2>
