--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F272206.jpg" alt="lasagna on a plate">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F272206.jpg" alt="lasagna on a plate" style="width:600px">
     <h2>Description</h2>
         <p>Lasagna is a baked Italian dish consisting of wide strips of pasta cooked and layered with meat or vegetables, cheese, and tomato sauce. It is traditionally an Italian dish, but is popular all over the world.</p>
         <p>This particular recipe has been passed down for generations and can be considered a fairly common iteration of this classic dish. Try it today and let us know what you think!</p>
