--- a/recipes/peanut-butter-cookies.html
+++ b/recipes/peanut-butter-cookies.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Flourless Peanut Butter Cookies</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F2271991.jpg" alt="picture of a flourless peanut butter cookie">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F2271991.jpg" alt="picture of a flourless peanut butter cookie" style="width:600px">
     <h2>Description</h2>
         <p>This simple, tasty recipe yields 12 to 16 cookies, but is so simple that it can be doubled (or tripled!) easily.</p>
     <h2>Ingredients</h2>
